some more details added

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>eBay.in Clone</title>
+    <title>eBay.in Clone by Arshad Khan</title>
+    <!-- eBay.in Clone by Arshad Khan -->
+    <!-- github ID:-  https://github.com/mdarshadkhan1998 -->
+    <!-- LinkedIn ID:-  https://www.linkedin.com/in/arshad-khan-350206154 -->
+    <!-- Instagram ID:-  https://www.instagram.com/_mad___boxer_/ -->
     <link rel="stylesheet" href="/css/index.css" />
     <link rel="stylesheet" href="/css/popup1.css"/>
     <link rel="stylesheet" href="/css/popup2.css"/>
